--- a/feed.yml
+++ b/feed.yml
@@ -1,12 +1,12 @@
 name: Feed
 version: 2.0.0
-description: "Morfy feed plugin provide simple RSS feed."
+description: "Fansoro feed plugin provide simple RSS feed."
 author:
   name: Sergey Romanenko
   email: awilum@msn.com
-  url: http://morfy.org
-homepage: https://github.com/morfy-cms/morfy-plugin-feed
-bugs: https://github.com/morfy-cms/morfy-plugin-feed/issues
+  url: http://fansoro.org
+homepage: https://github.com/fansoro/fansoro-plugin-feed
+bugs: https://github.com/fansoro/fansoro-plugin-feed/issues
 license: MIT
 
 # Plugin settings
